# PointCloudProcessing

./: .clang-format  CMakeLists.txt  CMesh.h  Console.cpp  Console.h  DataMgr.cpp  DataMgr.h  GLArea.cpp  GLArea.h  GLDrawer.cpp  GLDrawer.h  GlobalFunction.cpp  GlobalFunction.h  LICENSE  Parameter.cpp  Parameter.h  ParameterMgr.cpp  ParameterMgr.h  README.md  WLOP.cpp  WLOP.h  calculationthread.cpp  calculationthread.h  default.ply  default_original.ply  grid.cpp  grid.h  main.cpp  mainwindow.cpp  mainwindow.h  plylib.cpp  trackball.h  trackmode.cpp  trackmode.h
Algorithm/: NormalSmoother.cpp  NormalSmoother.h  PointCloudAlgorithm.h  Skeleton.cpp  Skeleton.h  Skeletonization.cpp  Skeletonization.h  Upsampler.cpp  Upsampler.h  WLOP.cpp  WLOP.h  anistropicPCA_Normal.h  normal_extrapolation.h
IncludeLib/vcglib/apps/pivoting/: glarea.cpp  glarea.h
IncludeLib/vcglib/apps/sample/trimesh_QT/: glarea.cpp
IncludeLib/vcglib/vcg/math/: base.h
IncludeLib/vcglib/wrap/gl/: trimesh.h
UI/: dlg_normal_para.cpp  dlg_normal_para.h  dlg_skeleton_para.cpp  dlg_skeleton_para.h  dlg_upsampling_para.cpp  dlg_upsampling_para.h  dlg_wlop_para.cpp  dlg_wlop_para.h  std_para_dlg.cpp  std_para_dlg.h
